{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 200,
  "lineage": "f0225a26-939f-01a7-98d9-2d4cc12005f8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:072498559190:instance/i-0d5df8b71c2dbb43b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bibrani-s3-benchmark-report",
            "id": "i-0d5df8b71c2dbb43b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6i.large",
            "ipv6_address_count": 0,
            "key_name": "bibrani-us-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0621a80ce10a76438",
            "private_dns": "ip-10-20-10-229.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.10.229",
            "public_dns": "ec2-3-88-68-105.compute-1.amazonaws.com",
            "public_ip": "3.88.68.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:072498559190:key/c2c319e9-d11d-4946-9386-bf0c64e1c261",
                "throughput": 125,
                "volume_id": "vol-0fbb579afc5d53dde",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0818d1d0df111d235",
            "tags": {
              "Name": "bibrani-es-m6i.large"
            },
            "tags_all": {
              "Name": "bibrani-es-m6i.large"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03059ad572718fc57"
            ]
          },
          "dependencies": [
            "aws_security_group.bibrani-sg-us",
            "aws_subnet.bibrani-public-subnet-us",
            "aws_vpc.bibrani-vpc-us"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:072498559190:instance/i-05d5467a1f59250ec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bibrani-s3-benchmark-report",
            "id": "i-05d5467a1f59250ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6i.xlarge",
            "ipv6_address_count": 0,
            "key_name": "bibrani-us-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e624256621f9d8e5",
            "private_dns": "ip-10-20-10-172.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.10.172",
            "public_dns": "ec2-34-201-93-122.compute-1.amazonaws.com",
            "public_ip": "34.201.93.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:072498559190:key/c2c319e9-d11d-4946-9386-bf0c64e1c261",
                "throughput": 125,
                "volume_id": "vol-05ab656166ee09234",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0818d1d0df111d235",
            "tags": {
              "Name": "bibrani-es-m6i.xlarge"
            },
            "tags_all": {
              "Name": "bibrani-es-m6i.xlarge"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03059ad572718fc57"
            ]
          },
          "dependencies": [
            "aws_security_group.bibrani-sg-us",
            "aws_subnet.bibrani-public-subnet-us",
            "aws_vpc.bibrani-vpc-us"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:072498559190:instance/i-0988ca2c1945680a4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bibrani-s3-benchmark-report",
            "id": "i-0988ca2c1945680a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6i.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "bibrani-us-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03757b7dc8ab3f964",
            "private_dns": "ip-10-20-10-88.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.10.88",
            "public_dns": "ec2-54-227-80-97.compute-1.amazonaws.com",
            "public_ip": "54.227.80.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:072498559190:key/c2c319e9-d11d-4946-9386-bf0c64e1c261",
                "throughput": 125,
                "volume_id": "vol-0642766e8f10b8096",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0818d1d0df111d235",
            "tags": {
              "Name": "bibrani-es-m6i.2xlarge"
            },
            "tags_all": {
              "Name": "bibrani-es-m6i.2xlarge"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03059ad572718fc57"
            ]
          },
          "dependencies": [
            "aws_security_group.bibrani-sg-us",
            "aws_subnet.bibrani-public-subnet-us",
            "aws_vpc.bibrani-vpc-us"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bibrani-igw-us",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072498559190:internet-gateway/igw-090284d73a4fa89a6",
            "id": "igw-090284d73a4fa89a6",
            "owner_id": "072498559190",
            "vpc_id": "vpc-0d3190cf9838d83ea"
          },
          "dependencies": [
            "aws_vpc.bibrani-vpc-us"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-090284d73a4fa89a6",
            "id": "r-rtb-09a777d1bdc6be18f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09a777d1bdc6be18f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.bibrani-igw-us",
            "aws_route_table.bibrani-route-table",
            "aws_vpc.bibrani-vpc-us"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bibrani-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072498559190:route-table/rtb-09a777d1bdc6be18f",
            "id": "rtb-09a777d1bdc6be18f",
            "owner_id": "072498559190",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d3190cf9838d83ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bibrani-vpc-us"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso_bibrani",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6270031a084474b",
            "route_table_id": "rtb-09a777d1bdc6be18f",
            "subnet_id": "subnet-0818d1d0df111d235"
          },
          "dependencies": [
            "aws_route_table.bibrani-route-table",
            "aws_subnet.bibrani-public-subnet-us",
            "aws_vpc.bibrani-vpc-us"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bibrani-sg-us",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072498559190:security-group/sg-03059ad572718fc57",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03059ad572718fc57",
            "ingress": [
              {
                "cidr_blocks": [
                  "111.95.57.56/32",
                  "114.4.200.222/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "bibrani-sg-us",
            "name_prefix": "",
            "owner_id": "072498559190",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d3190cf9838d83ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bibrani-vpc-us"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bibrani-public-subnet-us",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072498559190:subnet/subnet-0818d1d0df111d235",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0818d1d0df111d235",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "072498559190",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bibrani-public-subnet-us"
            },
            "tags_all": {
              "Name": "bibrani-public-subnet-us"
            },
            "vpc_id": "vpc-0d3190cf9838d83ea"
          },
          "dependencies": [
            "aws_vpc.bibrani-vpc-us"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bibrani-vpc-us",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072498559190:vpc/vpc-0d3190cf9838d83ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-06ed51fd59b56bd08",
            "default_route_table_id": "rtb-0aa1f4eb741e91535",
            "default_security_group_id": "sg-044c8b3ddce757458",
            "dhcp_options_id": "dopt-6de7ba17",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d3190cf9838d83ea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa1f4eb741e91535",
            "owner_id": "072498559190"
          }
        }
      ]
    }
  ]
}